--- a/helpdesk/index.html
+++ b/helpdesk/index.html
@@ -23,40 +23,12 @@
 					<div>
 						<select class = "w" id = "oddzial" required oninvalid="this.setCustomValidity('Proszę wybrać jednostkę')" oninput="this.setCustomValidity('')">
 							<optgroup label = "Oddziały">
-								<Option>Blok Operacyjny</Option>
-								<Option>Oddział Chirurgiczny</Option>
-								<Option>Oddział Chorób Wewnętrznych</Option>
-								<Option>Oddział Dziecięcy</Option>
-								<Option>Oddział Ginekologiczno-Położniczy</Option>
-								<Option>Oddział Neonatologiczny</Option>
-							</optgroup>
-							<optgroup label = "Poradnie">
-								<Option>Poradnia Chirurgiczna</Option>
-								<Option>Poradnia K</Option>
-								<Option>Poradnia Laryngologiczna</Option>
-								<Option>Poradnia Urazowo-Ortopedyczna</Option>
-							</optgroup>
-							<optgroup label = "POZ">
-								<Option>POZ Fabryczna</Option>
-								<Option>POZ Wyczółkowskiego</Option>
-							</optgroup>
-							<optgroup label = "WOZ">
-								<Option>WOZ Działoszyn</Option>
-								<Option>WOZ Opolno</Option>
-								<Option>WOZ Porajów</Option>
-							</optgroup>
-							<optgroup label = "Pracownie">
-								<Option>Pracownia RTG</Option>
-								<Option>Pracownia USG</Option>
-							</optgroup>
-							<optgroup label = "Pozostałe">
-								<Option>Administracja</Option>
-								<Option>Izba Przyjęć</Option>
-								<Option>Laboratorium</Option>
-								<Option>Porodówka</Option>
-								<Option>Rejestracja Główna</Option>
-								<Option>Rehabilitacja</Option>
-								<Option>Serologia</Option>
+								<Option value="1">Blok Operacyjny</Option>
+								<Option value="2">Oddział Chirurgiczny</Option>
+								<Option value="3">Oddział Chorób Wewnętrznych</Option>
+								<Option value="4">Oddział Dziecięcy</Option>
+								<Option value="5">Oddział Ginekologiczno-Położniczy</Option>
+								<Option value="6">Oddział Neonatologiczny</Option>
 							</optgroup>
 						</select>
 					</div>
