--- a/helpdesk/read.html
+++ b/helpdesk/read.html
@@ -67,9 +67,9 @@
 		</div>
 		
 		<div id = 'okno' style = "display: none;">
-			<div id = 'oknotitle'><span>Dodaj nowy przykład rozwiązania błędu<span></div>
+			<div id = 'oknotitle'><span>Dodaj nowy przykład rozwiązania błędu</span></div>
 			<div id = 'okno2'>
-				Nazwa przykładu:<input id = "nazwa" type = "text" maxlength="32" placeholder = "Nazwa" oninvalid="this.setCustomValidity('Proszę wprowadzić Nazweę')" oninput="this.setCustomValidity('')"></input>
+				Nazwa przykładu:<input id = "nazwa" type = "text" maxlength="32" placeholder = "Nazwa" oninvalid="this.setCustomValidity('Proszę wprowadzić Nazweę')" oninput="this.setCustomValidity('')" />
 				Opis Błędu:
 				<textarea id = "blad" required maxlength="1024" placeholder = "Opis Usterki/Błędu" oninvalid="this.setCustomValidity('Proszę wprowadzić Opis usterki')" oninput="this.setCustomValidity('')"></textarea>
 				Przykładowe Rozwiązanie:
