--- a/helpdesk/index.html
+++ b/helpdesk/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Helpdesk">
 		<meta name="author" content="Bartosz Guz">
-		<link rel = "stylesheet" type = "text/css" href = "/style.css">
+		<link rel = "stylesheet" type = "text/css" href = "/index.css">
 	</head>
 	<body>
 		<div id = 'banner'>
