--- a/helpdesk/index.html
+++ b/helpdesk/index.html
@@ -23,12 +23,12 @@
 					<div>
 						<select class = "w" id = "oddzial" required oninvalid="this.setCustomValidity('Proszę wybrać jednostkę')" oninput="this.setCustomValidity('')">
 							<optgroup label = "Oddziały">
-								<Option value="1">Blok Operacyjny</Option>
-								<Option value="2">Oddział Chirurgiczny</Option>
-								<Option value="3">Oddział Chorób Wewnętrznych</Option>
-								<Option value="4">Oddział Dziecięcy</Option>
-								<Option value="5">Oddział Ginekologiczno-Położniczy</Option>
-								<Option value="6">Oddział Neonatologiczny</Option>
+								<Option value="1">Dział sprzedaży</Option>
+								<Option value="2">Dział HR</Option>
+								<Option value="3">Dział produkcji</Option>
+								<Option value="4">Dział sprzedaży</Option>
+								<Option value="5">Dział sprzedaży</Option>
+								<Option value="6">Dział sprzedaży</Option>
 							</optgroup>
 						</select>
 					</div>
