--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -3,9 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <title>Home</title>
 </head>
 <body>
-
+    <div class="sidenav">
+        <a href="#" onclick="test();">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+    <div class="main" id="test1"></div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="/home.js"></script>
 </body>
 </html>
