--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="#" onclick="test();">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a class="tablinks" href="#" onclick="tabs('add_ticket');">Nowy ticket</a>
+        <a class="tablinks" href="#" onclick="tabs('view_ticket');">Twoje tickety</a>
+        <a class="tablinks" href="#" onclick="tabs('settings');">Ustawienia</a>
+        <a href="#">Wyloguj</a>
     </div>
-    <div class="main" id="test1"></div>
+    <div class="main" id="test1">
+        <div id="add_ticket" class="tabcontent">dodaj</div>
+        <div id="view_ticket" class="tabcontent">wyswietl</div>
+        <div id="settings" class="tabcontent">ustawienia</div>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="/home.js"></script>
