--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -11,7 +11,7 @@
         <a class="tablinks" href="#" onclick="tabs('add_ticket');">Nowy ticket</a>
         <a class="tablinks" href="#" onclick="tabs('view_ticket');">Twoje tickety</a>
         <a class="tablinks" href="#" onclick="tabs('settings');">Ustawienia</a>
-        <a href="#">Wyloguj</a>
+        <a href="/logout">Wyloguj</a>
     </div>
     <div class="main" id="test1">
         <div id="add_ticket" class="tabcontent">dodaj</div>
