--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -25,7 +25,12 @@
             </select>
             <button onClick="send();">Wyślij</button>
         </div>
-        <div id="view_ticket" class="tabcontent">wyswietl</div>
+        <div id="view_ticket" class="tabcontent">
+            <ul id="ticket_list">
+            </ul>
+            <button onclick="next(1)">next</button>
+            <button onclick="next(-1)">prev</button>
+        </div>
         <div id="settings" class="tabcontent">ustawienia</div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
