--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -31,7 +31,7 @@
             <button onclick="next(1)">next</button>
             <button onclick="next(-1)">prev</button>
         </div>
-        <div id="view_ticket"></div>
+        <div id="view_ticket" class="tabcontent"></div>
         <div id="settings" class="tabcontent">ustawienia</div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
