more info on ticket view

--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -39,7 +39,7 @@
                     <th><textarea type="text" id="desc" wrap="hard"></textarea></th>
                 </tr>
                 <tr>
-                    <th class="header"  colspan="2"><button onClick="send();">Wyślij</button></th>
+                    <th class="header" colspan="2"><button onClick="send();">Wyślij</button></th>
                 </tr>
             </table>
         </div>
