--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -63,8 +63,7 @@
 
             <h2>Komentarze</h2>
             <table id="view_ticket_com">
-                <tr><th class="header">Komentarze</th></tr>
-                <tr><th>Brak Komentarzy</th></tr>
+                <tr><td class="header">Data dodania</td><td class="header">Użytkownik</td><td class="header">Komentarz</td></tr>
             </table>
 
             <h2>Dodaj Komentarz</h2>
