--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -46,7 +46,7 @@
         </div>
         <div id="list_ticket" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
-            <table id="ticket_list">
+            <table id="ticket_list" class="ticketList">
                 <tr>
                     <td>ID</td>
                     <td>Temat</td>
@@ -60,7 +60,7 @@
         </div>
         <div id="list_ticket_admin" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
-            <table id="ticket_list_admin">
+            <table id="ticket_list_admin" class="ticketList">
                 <tr>
                     <td>ID</td>
                     <td>Temat</td>
