--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -45,7 +45,7 @@
         </div>
         <div id="list_ticket" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
-            <table id="ticket_list">
+            <table id="ticket_list" class="ticketList">
                 <tr>
                     <td>ID</td>
                     <td>Temat</td>
