--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -44,6 +44,7 @@
                 </tr>
             </table>
         </div>
+
         <div id="list_ticket" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
             <table id="ticket_list" class="ticketList">
@@ -58,6 +59,7 @@
             <button onclick="next(-1)">prev</button>
             <button onclick="next(1)">next</button>
         </div>
+
         <div id="list_ticket_admin" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
             <table id="ticket_list_admin" class="ticketList">
@@ -72,6 +74,7 @@
             <button onclick="next_admin(-1)">prev</button>
             <button onclick="next_admin(1)">next</button>
         </div>
+
         <div id="view_ticket" class="tabcontent">
             <h2>Zgłoszenie</h2>
             <table id="view_ticket_table"></table>
@@ -84,15 +87,11 @@
             <h2>Dodaj Komentarz</h2>
             <table id="add_com">
                 <tr><th class="header" colspan="2">Dodaj Komentarz</th></tr>
-                <tr>
-                    <th class="header">Treść</th>
-                    <th><input type="text" id="com" /></th>
-                </tr>
-                <tr>
-                    <th class="header" colspan="2"><button onClick="send_com();">Wyślij</button></th>
-                </tr>
+                <tr><th class="header">Treść</th><th><input type="text" id="com" /></th></tr>
+                <tr><th class="header" colspan="2"><button onClick="send_com();">Wyślij</button></th></tr>
             </table>
         </div>
+
         <div id="settings" class="tabcontent">
             <h2>Ustawienia</h2>
         </div>
