--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -26,13 +26,7 @@
                 </tr>
                 <tr>
                     <th class="header" >Priorytet</th>
-                    <th>
-                        <select id="priority">
-                            <option value="0">Niski</option>
-                            <option value="1">Normalny</option>
-                            <option value="2">Wysoki</option>
-                        </select>
-                    </th>
+                    <th><select id="priority"></select></th>
                 </tr>
                 <tr>
                     <th class="header" >Opis</th>
