--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -102,6 +102,15 @@
 
         <div id="settings" class="tabcontent">
             <h2>Ustawienia</h2>
+
+            <h2>Priorytet</h2>
+            <table id="config_priority"></table>
+
+            <h2>Status</h2>
+            <table id="config_status"></table>
+
+            <h2>Dział</h2>
+            <table id="config_dept"></table>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
