add, edit priority

--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -105,6 +105,13 @@
 
             <h2>Priorytet</h2>
             <table id="config_priority"></table>
+            <table id="add_config_priority">
+                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+                <tr>
+                    <th class="full_width"><input id="add_priority_input" class="full_cell" type="text" /></th>
+                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addPriority();' /></th>
+                </tr>
+            </table>
 
             <h2>Status</h2>
             <table id="config_status"></table>
