--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -115,9 +115,23 @@
 
             <h2>Status</h2>
             <table id="config_status"></table>
+            <table id="add_config_status">
+                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+                <tr>
+                    <th class="full_width"><input id="add_status_input" class="full_cell" type="text" /></th>
+                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addStatus();' /></th>
+                </tr>
+            </table>
 
             <h2>Dział</h2>
             <table id="config_dept"></table>
+            <table id="add_config_dept">
+                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+                <tr>
+                    <th class="full_width"><input id="add_dept_input" class="full_cell" type="text" /></th>
+                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addDept();' /></th>
+                </tr>
+            </table>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
