--- a/helpdesk/home.html
+++ b/helpdesk/home.html
@@ -40,7 +40,7 @@
 
         <div id="list_ticket" class="tabcontent">
             <h2>Twoje Zgłoszenia</h2>
-            <table id="ticket_list" class="ticketList">
+            <table id="ticket_list" class="list">
                 <tr>
                     <td>ID</td>
                     <td>Temat</td>
