--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -194,6 +194,18 @@
             <table id="user_list" class="list"></table>
         </div>
 
+        <div id="edit_user_tab" class="tabcontent">
+            <div class="topnav">
+                <a href="#" onclick="tabs('settings');">Zmienne</a>
+                <a href="#" onclick="tabs('settings2');">Dodaj Użytkownika</a>
+                <a href="#" onclick="tabs('settings3');" class="active">Zarządzaj Użytkownikami</a>
+                <a href="#" onclick="tabs('settings4');">About</a>
+            </div>
+            <h2>Edytuj dane Użytkownika</h2>
+            <table id="edit_user" class=""></table>
+            <table id="edit_user_controls"></table>
+        </div>
+
         <div id="settings4" class="tabcontent">
             <div class="topnav">
                 <a href="#" onclick="tabs('settings');">Zmienne</a>
