--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -14,6 +14,9 @@
         <a class="tablinks" href="#" onclick="tabs('settings');">Ustawienia</a>
         <a href="/logout">Wyloguj</a>
     </div>
+
+    <div id="popup"><label id="popup_text"></label></div>
+
     <div class="main" id="test1">
         <div id="add_ticket" class="tabcontent">
             <h2>Nowe Zgłoszenie</h2>
