--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -70,15 +70,7 @@
                     <td><button onclick="next_admin(1)">&#10095;</button></td>
                 </tr>
             </table>
-            <table id="ticket_list_admin" class="list">
-                <tr>
-                    <td>ID</td>
-                    <td>Temat</td>
-                    <td>Data</td>
-                    <td>Status</td>
-                    <td>Priorytet</td>
-                </tr>
-            </table>
+            <table id="ticket_list_admin" class="list"></table>
         </div>
 
         <div id="view_ticket" class="tabcontent">
