sort list for user

--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -65,9 +65,9 @@
         <div id="list_ticket_admin" class="tabcontent">
             <table class="list">
                 <tr>
-                    <td><button onclick="next_admin(-1)">&#10094;</button></td>
+                    <td><button onclick="nextAdmin(-1)">&#10094;</button></td>
                     <td><label class="label_title">Zgłoszenia Wszystkich Użytkowników</label></td>
-                    <td><button onclick="next_admin(1)">&#10095;</button></td>
+                    <td><button onclick="nextAdmin(1)">&#10095;</button></td>
                 </tr>
             </table>
             <table id="ticket_list_admin" class="list"></table>
