arrow for sorting

--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -51,15 +51,7 @@
                 </tr>
             </table>
 
-            <table id="ticket_list" class="list">
-                <tr>
-                    <td>ID</td>
-                    <td>Temat</td>
-                    <td>Data</td>
-                    <td>Status</td>
-                    <td>Priorytet</td>
-                </tr>
-            </table>
+            <table id="ticket_list" class="list"></table>
         </div>
 
         <div id="list_ticket_admin" class="tabcontent">
@@ -70,6 +62,7 @@
                     <td><button onclick="nextAdmin(1)">&#10095;</button></td>
                 </tr>
             </table>
+
             <table id="ticket_list_admin" class="list"></table>
         </div>
 
