--- a/helpdesk/login.html
+++ b/helpdesk/login.html
@@ -3,17 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <title>login</title>
 </head>
 <body>
-    <div class="login">
-        <h1>Login</h1>
+    <div class="banner center" style="top:10%;"><h1>Witaj na stronie Helpdesku</h1></div>
+    <div class="login center">
+        <h2>Zaloguj się</h2>
         <form action="/auth" method="post">
-            <label for="username">Email:</label>
-            <input type="text" name="email" placeholder="email@example.com" id="email" required>
-            <label for="password">Password:</label>
-            <input type="password" name="password" placeholder="Password" id="password" required>
-            <input type="submit" value="Login">
+            <label for="username">E-mail:</label><br>
+            <input type="text" name="email" placeholder="email@example.com" id="email" required><br>
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" placeholder="Password" id="password" required><br>
+            <input type="submit" value="Login"/>
         </form>
     </div>
 </body>
